Derniers réglages (Suppression d'une largeur fixe pour la barre de recherche, réduction du gap des cartes hébergements et correction de la largeur du footer)

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: stretch;
 }
 
 nav > img {
@@ -51,15 +50,10 @@ nav > img {
     margin-bottom: 15px;
 }
 
-.texte-head > h2, .texte-head > p{
-    margin: 5px;
-}
-
 .ensemble-barre-recherche {
     display: flex;
     flex-direction: row;
     height: 49px;
-    width: 377px;
     margin-top: 30px;
     margin-bottom: 30px;
 }
@@ -111,6 +105,7 @@ nav > img {
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .filtres-button {
@@ -223,6 +218,7 @@ a {
 .hebergements-cards {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     margin-top: 33px;
     gap: 30px;
 }
@@ -234,7 +230,7 @@ a {
 }
 
 .hebergements-cards a {
-    width: 30%;
+    width: 29%;
 }
 
 .hebergements-cards .card-txt, .card-rating {
@@ -340,8 +336,6 @@ footer {
     justify-content: space-between;
     background-color: #F2F2F2;
     padding: 20px 20px 0px 20px;
-    width: 100%;
-    gap: 15px;
 }
 
 footer ul {
@@ -462,7 +456,7 @@ footer h3 {
         gap: 10px;
     }
 
-    .filtres h3 {
+    .filtres h2 {
         width: 100%;
     }
 
@@ -526,7 +520,6 @@ footer h3 {
 
     footer {
         flex-direction: column;
-        padding: 30px;
     }
 
     footer ul {
